# CPPLab4

./: CMakeLists.txt  Dockerfile  test.cmd  ЛР5.docx
src/: jacobi_static.cpp  jacobi_threads.cpp  jacobi_threads_mpi.cpp
